# CritNeT

./: .gitignore  README.md  pyproject.toml
blog/: README.md
blog/figures/: README.md
critnet/: README.md  __init__.py  config.py  deactivator.py  detector.py  model.py  statistician.py
docs/: index.html  style.css
lima_s1_exp/: README.md  dataloader.py  utils.py
lima_s1_exp/configs/acc_config/: ds_zero2_4.yaml
lima_s1_exp/configs/exp_config/: sft_config.yaml  sft_lora_config.yaml
lima_s1_exp/eval/: eval_safe.py  eval_utility.py  eval_utility_en.py  grader.py  lima_s1_en_deactivate_utility.py  pairwise_deactivate_safety.py  parser.py
lima_s1_exp/exp1_utility_neuron_ablation_en/: run_ablation.py
lima_s1_exp/exp2_refusal_utility_grid_search/: pairwise_deactivate.py  pairwise_statistics.py
lima_s1_exp/exp3_safety_neuron_deactivation/: deactivation.py  eval_safe.py  eval_utility.py
lima_s1_exp/exp4_freeze_ft_attack/: freeze_ft.py  full_ft.py
lima_s1_exp/exp5_multilingual_critical_foundational/: neuron_detection.py  neuron_statistics.py  neuron_tuning.py
lima_s1_exp/ft_datasets/: README.md
lima_s1_exp/ft_datasets/lima/: README.md  en.csv  it.csv  jv.csv  ko.csv  sw.csv  vi.csv  zh.csv
lima_s1_exp/ft_datasets/s1/: README.md  ar.csv  bn.csv  en.csv  it.csv  jv.csv  ko.csv  sw.csv  th.csv  vi.csv  zh.csv
lima_s1_exp/ft_datasets/safety/: ar.csv  bn.csv  de.csv  en.csv  fr.csv  it.csv  jv.csv  ko.csv  sw.csv  th.csv  vi.csv  (+1 more)
tests/: conftest.py  test_config.py  test_deactivator.py  test_detector.py  test_freeze.py  test_model.py  test_statistician.py
(+13 files in other folders)
